--- a/src/partials/favorites-page/default.html
+++ b/src/partials/favorites-page/default.html
@@ -1,6 +1,6 @@
 <section class="favorite">
     <div class="fav-hero container"> 
-        <div class="fav-static ">
+        <div class="fav-static fav-phantom">
             <picture class="fav-img">
                 <source srcset="
                 ./img/images/cardcard-desk1080.jpg 1x, 
@@ -18,7 +18,7 @@
                  media="(max-width: 767px)"
                 />
                 
-                <img class="fav-img" src="./img/images/cardcard335.jpg" alt="favourite dish" />
+                <img src="./img/images/cardcard335.jpg" alt="favourite dish" />
             </picture>
         </div>  
 
@@ -45,9 +45,9 @@
         <div class="fav-categories">
             
         </div>
-        <div class="fav-container">
+        <ul class="fav-container fav-style-reset">
             
-        </div>
+        </ul>
     </div>   
   </div>
 </section>
