--- a/src/partials/favorites-page/default.html
+++ b/src/partials/favorites-page/default.html
@@ -45,7 +45,7 @@
         <div class="fav-categories">
             
         </div>
-        <ul class="fav-container fav-style-reset">
+        <ul class="fav-container fav-container-js fav-style-reset ">
             
         </ul>
     </div>   
