--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -155,6 +155,7 @@
   line-height: 112.5%;
   letter-spacing: -0.64px;
   color: var(--primary-brand-color);
+  transition: var(--transition);
   
 }
 
