--- a/src/css/base/root.css
+++ b/src/css/base/root.css
@@ -2,21 +2,37 @@
   --primary-brand-color: #050505;
   --secondary-brand-color: #9bb537;
   --background-color: #f8f8f8;
-  --filter-input-pagination-color: rgba(5, 5, 5, 0.5);
+
+  --filter-input-pagination-color: #05050533;
+  --placeholder: #05050580;
+  --select-open: #ffffff;
+  --select-open-text: #0505054d;
   --switcher-theme-background: #cecdcd;
+  --see-recipe-text-color: rgba(5, 5, 5, 0.80);
   --modal-background: #9bb537;
   --modal-text-color: #ffffff;
   --modal-hover: #050505;
+  --category-button: rgba(5, 5, 5, 0.3);
+  --all-categories: rgba(5, 5, 5, 0.2);
+  --modal-rating-back:#FFF;
+  --star-no-active:#D9D9D9;
+  --modal-email: #ffffff;
 }
 :root[data-theme='dark'] {
   --primary-brand-color: #ffffff;
   --secondary-brand-color: #9bb537;
   --background-color: #161616;
-  --filter-input-pagination-color: rgba(255, 255, 255, 0.5);
+  --filter-input-pagination-color: #ffffff80;
+  --see-recipe-text-color:#ffffffcc;
   --switcher-theme-background: #9bb537;
   --modal-background: #050505;
   --modal-text-color: #f8f8f8;
   --modal-hover: #9bb537;
+  --category-button: rgba(255, 255, 255, 0.3);
+  --all-categories: rgba(255, 255, 255, 0.2);
+  --modal-rating-back:#050505;
+  --star-no-active:#3C3B3B;
+  --modal-email: #161616;
 }
 
 :root {
