added rating star

--- a/src/css/layout/main-page/cards.css
+++ b/src/css/layout/main-page/cards.css
@@ -191,12 +191,12 @@
   margin-top: 23px;
 }
 
-/* .reting-item {
+.reting-item {
   width: 18px;
   height: 18px;
   background-image: url('/img/sprite/star-gray.svg');
   background-repeat: no-repeat;
-} */
+}
 .reting-item.filled {
   width: 18px;
   height: 18px;
