--- a/src/css/base/root.css
+++ b/src/css/base/root.css
@@ -8,7 +8,7 @@
   --select-open: #ffffff;
   --select-open-text: #0505054d;
   --switcher-theme-background: #cecdcd;
-  --see-recipe-text-color: rgba(5, 5, 5, 0.80);
+  --see-recipe-text-color: rgba(5, 5, 5, 0.8);
   --modal-background: #9bb537;
   --modal-text-color: #ffffff;
   --modal-hover: #050505;
@@ -20,7 +20,8 @@
   --secondary-brand-color: #9bb537;
   --background-color: #161616;
   --filter-input-pagination-color: #ffffff80;
-  --see-recipe-text-color:#ffffffcc;
+  --placeholder: #ffffff80;
+  --see-recipe-text-color: #ffffffcc;
   --switcher-theme-background: #9bb537;
   --modal-background: #050505;
   --modal-text-color: #f8f8f8;
