--- a/src/css/layout/main-page/cards.css
+++ b/src/css/layout/main-page/cards.css
@@ -96,8 +96,19 @@
   height: 22px;
 
   border: none;
-  background: transparent;
+  transition: transform 3s;
+  /* background: transparent; */
 }
+.like-btn:hover {
+  transform: scale(1.1);
+  animation: pulse 1s infinite alternate;
+}
+@keyframes pulse {
+  to {
+    transform: scale(1.5);
+  }
+}
+
 .icon-heart {
   background-image: url('/img/sprite/heart.svg');
   background-repeat: no-repeat;
