--- a/src/partials/favorites-page/default.html
+++ b/src/partials/favorites-page/default.html
@@ -48,6 +48,8 @@
         <ul class="fav-container fav-container-js fav-style-reset ">
             
         </ul>
+        
+        <div id="paginationFAV"></div>
     </div>   
   </div>
 </section>
