--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,18 +1,20 @@
 .footer {
-  background-color: var(--not-active-btn-color-black);
-  padding: 50px 0;
-  background-color: var(--cards-text-color-white-theme);
+  background-color: var(--background-color);
+  padding: 5px 5px;
+  transition: var(--transition);
   border-top: 2px solid rgba(151, 177, 52, 0.5);
 }
 
 .footer-all {
+  padding: 5px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
-  row-gap: 50px;
+  row-gap: 25px;
   justify-content: center;
+  border-bottom: 2px solid rgba(151, 177, 52, 0.5);
 }
-
+/* 
 .footer-all::after {
   content: '';
   display: block;
@@ -20,34 +22,33 @@
   height: 0px;
   border: 1px solid rgba(151, 177, 52, 0.7);
   transform: translateY(-20px);
-}
-@media only screen and (min-width: 1280px) {
+} */
+/* @media only screen and (min-width: 1280px) {
   .footer-all::after {
     transform: translateY(-20px);
   }
-}
+} */
 .footer-container-logo {
   display: inline-block;
-  width: 268px;
+  max-width: 268px;
 }
 
 .footer-text {
+  color: var(--primary-brand-color);
   max-width: 268px;
-  font-size: 12px;
-  line-height: 1.33;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   line-clamp: 2;
   -webkit-box-orient: vertical;
-  font-weight: 300;
-  font-size: 24px;
-  line-height: 1.17;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.1;
   letter-spacing: -0.02em;
 }
 .logo-footer {
+  color: var(--primary-brand-color);
   display: flex;
   justify-content: center;
-  font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
@@ -55,23 +56,9 @@
   display: flex;
   align-items: center;
   letter-spacing: 0.03em;
-  margin-bottom: 16px;
+  margin-bottom: 10px;
 }
-.title-media {
-  display: flex;
-  justify-content: center;
-  font-size: 16px;
-  font-weight: 500;
-  font-style: normal;
-  line-height: 24px;
-  align-items: center;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  text-transform: none;
-  margin-bottom: 16px;
-  margin-top: 0;
-  color: var(--text-color-white-theme);
-}
+
 .footer-media {
   width: 268px;
   margin: 0;
@@ -83,18 +70,18 @@
 }
 
 .footer-social-list-icon {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms var(--transition);
   fill: var(--not-active-btn-color-white);
   width: 24px;
   height: 24px;
 }
 .footer-social-list-link {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition);
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 24px;
+  height: 24px;
   background-color: var(--accent-color);
   border-radius: 50%;
 }
@@ -110,11 +97,15 @@
 
 @media screen and (min-width: 768px) {
   .footer-text {
-    max-width: 264px;
+    max-width: 300px;
+  }
+  .footer-container-logo {
+    max-width: 300px;
   }
   .footer-media {
     width: 208px;
     margin: 0;
+    padding-top: 30px;
   }
   .footer-all {
     justify-content: center;
@@ -123,7 +114,7 @@
 }
 @media screen and (min-width: 1280px) {
   .footer {
-    padding: 50px 0;
+    padding: 25px 0;
   }
   .footer-all {
     flex-wrap: nowrap;
@@ -131,13 +122,17 @@
     justify-content: center;
     gap: 100px;
   }
+  .footer-media {
+    padding-top: 0;
+  }
 }
+
 .footer-policy {
-  /* margin-top: 40px; */
+  padding-top: 5px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
-  row-gap: 50px;
+  row-gap: 25px;
   justify-content: center;
 }
 
@@ -150,7 +145,7 @@
 .footer-policy-list {
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 10px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -163,8 +158,8 @@
 
 .footer-policy-link {
   font-style: normal;
-  font-weight: 500;
-  line-height: 1.14;
+  font-weight: 600;
+  line-height: 0.8;
   align-items: center;
   letter-spacing: -0.02em;
   color: rgba(125, 200, 0, 0.5);
@@ -172,7 +167,7 @@
 
 @media only screen and (min-width: 768px) {
   .footer-policy-link {
-    transition: color 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+    transition: var(--transition);
   }
 }
 
@@ -189,13 +184,6 @@
   }
 }
 
-/* .footer-policy-list {
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
-    justify-content: center;
-  }
-   */
 @media only screen and (min-width: 768px) {
   .footer-policy-list {
     flex-direction: row;
@@ -205,7 +193,7 @@
 
 @media only screen and (min-width: 768px) {
   .footer-policy-link {
-    transition: color 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+    transition: color var(--transition);
   }
 }
 
