--- a/src/css/base/root.css
+++ b/src/css/base/root.css
@@ -17,6 +17,8 @@
   --modal-rating-back:#FFF;
   --star-no-active:#D9D9D9;
   --modal-email: #ffffff;
+  --link-icon-x: url('/img/sprite/icon-close-dark.svg');
+  
 }
 :root[data-theme='dark'] {
   --primary-brand-color: #ffffff;
@@ -33,6 +35,8 @@
   --modal-rating-back:#050505;
   --star-no-active:#3C3B3B;
   --modal-email: #161616;
+  
+  --link-icon-x: url('/img/sprite/icon-close-x.svg');
 }
 
 :root {
@@ -48,4 +52,5 @@
   --form-border-color: #05050533;
   --star-color: #eea10c;
   --black-bg-color: #050505;
+  
 }
