--- a/src/css/layout/favorites-page/default.css
+++ b/src/css/layout/favorites-page/default.css
@@ -62,8 +62,8 @@
 }
 
 .fav-categories{
-  display: inline-flex;
-  gap: 10px;
+  display: flex;
+  gap: 12px;
   overflow: scroll;
 }
 
@@ -77,7 +77,8 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 1.3;
-    text-wrap: nowrap;
+    display: flex;
+    flex-wrap: nowrap;
 
     padding: 14px 18px;
 
