--- a/src/css/layout/favorites-page/default.css
+++ b/src/css/layout/favorites-page/default.css
@@ -63,8 +63,10 @@
 
 .fav-categories{
   display: flex;
+  position: relative;
   gap: 12px;
   overflow: scroll;
+  width: calc(100% + 15px);
 }
 
 .fav-categories::-webkit-scrollbar {
@@ -78,7 +80,8 @@
     font-weight: 500;
     line-height: 1.3;
     display: flex;
-    flex-wrap: nowrap;
+    align-items: center;
+    white-space: nowrap;
 
     padding: 14px 18px;
 
