--- a/src/partials/favorites-page/default.html
+++ b/src/partials/favorites-page/default.html
@@ -42,9 +42,9 @@
                     easier access in the future.
                 </p>
         </div>
-        <div class="fav-categories">
+        <div class="fav-container-categories"><div class="fav-categories">
             
-        </div>
+        </div></div>
         <ul class="fav-container fav-container-js fav-style-reset ">
             
         </ul>
