--- a/src/css/layout/main-page/cards.css
+++ b/src/css/layout/main-page/cards.css
@@ -131,7 +131,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 
-  margin-top: 198px;
+  margin-top: 214px;
   margin-bottom: 8px;
 
   user-select: none;
@@ -200,8 +200,13 @@
   display: flex;
   align-items: center;
   margin-top: 23px;
+  width: 116px;
 }
-
+@media screen and (min-width: 768px) {
+  .rating {
+    width: 96px;
+  }
+}
 /* .reting-item {
   width: 18px;
   height: 18px;
