try-to-do-curr-categ

--- a/src/partials/main-page/categories.html
+++ b/src/partials/main-page/categories.html
@@ -1,12 +1,12 @@
 <div class="category-container">
   <load
     src="partials/components/button.html"
-    btn-class="all-categories all-categories-js"
+    btn-class="all-categories all-categories-js all-categ-btn-active"
     btn-type="button"
     btn-text="All categories"
   />
 
-  <!--<button class="all-categories active-all">All categories</button>-->
+  <!-- <button class="all-categories active-all">All categories</button> -->
   <div class="categories categories-block">
     <ul class="category-list category-list-js">
       <!-- Категорії будуть додані за допомогою JavaScript -->
