--- a/src/css/layout/main-page/categories.css
+++ b/src/css/layout/main-page/categories.css
@@ -23,6 +23,11 @@ button {
   background-color: var(--secondary-brand-color);
 }
 
+.all-categ-btn-active {
+  color: var(--background-color);
+  background-color: var(--secondary-brand-color);
+}
+
 .categories-block {
   margin-top: 24px;
   width: 100%;
@@ -73,8 +78,7 @@ button {
   color: var(--secondary-brand-color);
 }
 
-.category-button:hover,
-.category-button:focus {
+.category-button-active{
   color: var(--secondary-brand-color);
 }
 
