--- a/src/partials/main-page/filters.html
+++ b/src/partials/main-page/filters.html
@@ -8,6 +8,7 @@
           type="text"
           name="user-search"
           id="search"
+          aria-label="Search Recipe"
           placeholder="Enter Text"
         />
         <button class="search-button" type="submit">
