--- a/src/partials/main-page/categories.html
+++ b/src/partials/main-page/categories.html
@@ -1,7 +1,7 @@
 <div class="category-container">
   <load
     src="partials/components/button.html"
-    btn-class="all-categories all-categories-js all-categ-btn-active"
+    btn-class="all-categories all-categories-js "
     btn-type="button"
     btn-text="All categories"
   />
