--- a/src/css/layout/main-page/new-order-modal.css
+++ b/src/css/layout/main-page/new-order-modal.css
@@ -24,7 +24,7 @@
     border-radius: 15px;
     z-index: 10000;
     box-shadow: 0px 0px 0.5px rgba(0, 0, 0, 0.3);
-    transition: all .4s;
+    transition:var(--transition)
 }
 
 .new-order-modal.active {
